--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
         <jackson.version>2.13.0</jackson.version>
         <javafaker.version>1.0.2</javafaker.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     </properties>
 
