--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <jackson.version>2.13.0</jackson.version>
         <javafaker.version>1.0.2</javafaker.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <logback.version>1.2.3</logback.version>
+
 
     </properties>
 
@@ -78,6 +80,12 @@
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
             <version>${javafaker.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
         </dependency>
 
 
